ingress/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: ingress-frontend
  namespace: microshop
spec:
  ingressClassName: traefik
  rules:
    - host: microshop.k8s.orb.local
      http:
        paths:
          - backend:
              service:
                name: svc-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
